# 77_wallet_sdk

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  module-desc.md
wallet-api/: Cargo.toml
wallet-api/benchmark/: insert_address.py  query_benchmark.py  update_benchmark.py
wallet-api/data/config/: chain.toml  coin.json  coin.toml  node.toml  rpc_back.json
wallet-api/data/default_chain_list/: _coins.json  _rpc.json  coins.json  default_chain_list.json  eth_default_chain_list.json  rpc.json  test_default_chain_list.json
wallet-api/data/hot_coin_list/: hot_coin_list.json
wallet-api/data/test/: 0x0996dc2A80F35D7075C426bf0Ac6e389e0AB99Fc  0xc6f9823E95782FAff8C78Cd67BD9C03F3A54108d
wallet-api/example/: config.toml
wallet-api/examples/: client1.rs  client2.rs  client3.rs  log.rs
wallet-api/src/: app_state.rs  config.rs  context.rs  data.rs  dirs.rs  handles.rs  lib.rs  manager.rs  response.rs  xlog.rs
wallet-api/src/api/: account.rs  address_book.rs  announcement.rs  api_account.rs  api_wallet.rs  app.rs  asset.rs  chain.rs  coin.rs  device.rs  mod.rs  multisig_account.rs  multisig_transaction.rs  node.rs  permission.rs  phrase.rs  stake.rs  swap.rs  system_notification.rs  transaction.rs  wallet.rs
wallet-api/src/cache/: mod.rs
wallet-api/src/default_data/: chain.rs  chains.rs  coin.rs  coins.rs  mod.rs  node.rs
wallet-api/src/domain/: address_book.rs  announcement.rs  api_account.rs  api_wallet.rs  bill.rs  cache.rs  exchange_rate.rs  mod.rs  node.rs  permission.rs  stake.rs  swap_client.rs  task_queue.rs
wallet-api/src/error/: mod.rs  service.rs  system.rs
wallet-api/src/infrastructure/: asset_calc.rs  cache.rs  inner_event.rs  mod.rs  process_collect_tx.rs  process_fee_tx.rs  process_unconfirm_msg.rs  process_withdraw_tx.rs  swap_client.rs
wallet-api/src/messaging/: mod.rs
wallet-api/src/mqtt/: constant.rs  eventloop.rs  handle.rs  mod.rs  topic.rs  user_property.rs
wallet-api/src/notify/: mod.rs
wallet-api/src/request/: account.rs  app.rs  assets.rs  coin.rs  config.rs  devices.rs  init.rs  mod.rs  permission.rs  stake.rs  wallet.rs
wallet-api/src/response_vo/: account.rs  address_book.rs  app.rs  assets.rs  chain.rs  coin.rs  mod.rs  multisig_account.rs  multisig_transaction.rs  permission.rs  permssion.rs  stake.rs  swap.rs  system_notification.rs  task_queue.rs  transaction.rs  wallet.rs
wallet-api/src/service/: account.rs  address_book.rs  announcement.rs  api_account.rs  api_wallet.rs  app.rs  asset.rs  bill.rs  chain.rs  coin.rs  device.rs  exchange_rate.rs  jpush.rs  mod.rs  multisig_account.rs  multisig_transaction.rs  node.rs  permission.rs  stake.rs  swap.rs  system_notification.rs  task_queue.rs  transaction.rs  wallet.rs
wallet-api/src/system_notification/: mod.rs  permission_change.rs
wallet-api/src/test/: config.rs  env.rs  mod.rs
wallet-api/tests/: account.rs  address_book.rs  bill.rs  config.rs  mod.rs  multisig_account.rs  permssions.rs  phrase.rs
wallet-api/tests/account/: mod.rs
wallet-api/tests/address_book/: mod.rs
wallet-api/tests/assets/: mod.rs
wallet-api/tests/backend/: mod.rs
wallet-api/tests/bill/: mod.rs
wallet-api/tests/chain/: mod.rs
wallet-api/tests/coin/: mod.rs
wallet-api/tests/config/: mod.rs
wallet-api/tests/multisig_account/: mod.rs
wallet-api/tests/multisig_tx/: mod.rs  multisig_bnb.rs  multisig_btc.rs  multisig_sol.rs  multisig_tron.rs
wallet-api/tests/permission/: mod.rs
wallet-api/tests/phrase/: mod.rs
wallet-api/tests/stake/: mod.rs  multisig_stake.rs  tron_delegate.rs  tron_stake.rs  tron_votes.rs
wallet-api/tests/swap/: eth_swap.rs  mod.rs  sol_swap.rs
wallet-api/tests/transactions/: mod.rs  sui.rs  tx_bnb.rs  tx_btc.rs  tx_doge.rs  tx_eth.rs  tx_ltc.rs  tx_sol.rs  tx_sui.rs  tx_ton.rs  tx_tron.rs
wallet-chain-instance/: Cargo.toml
wallet-chain-instance/src/: derivation_path.rs  lib.rs
wallet-chain-instance/src/error/: keypair.rs  mod.rs
wallet-chain-instance/src/instance/: mod.rs
wallet-chain-interact/: Cargo.toml
wallet-chain-interact/src/: chain_interact.rs  errors.rs  factory.rs  lib.rs  params.rs  utils.rs
wallet-chain-interact/src/btc/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  script.rs  signature.rs  tx_build.rs  utxos.rs
wallet-chain-interact/src/eth/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  subscribe.rs  transactions.rs
wallet-chain-interact/src/sol/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs
wallet-chain-interact/src/tron/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  tx_build.rs
wallet-chain-interact/src/types/: mod.rs  request.rs  response.rs  transaction.rs
wallet-chain-interact/tests/: experiment.rs  mod.rs
wallet-core/: Cargo.toml
wallet-core/src/: address.rs  derive.rs  keypair.rs  language.rs  lib.rs  xpriv.rs
wallet-core/src/error/: mod.rs
wallet-database/: Cargo.toml
wallet-database/src/: factory.rs  init.rs  lib.rs  pagination.rs  resources.rs
wallet-ecdh/: Cargo.toml  README.md
wallet-ecdh/src/: data.rs  encryption.rs  error.rs  lib.rs  sign.rs
wallet-error/: Cargo.toml
wallet-error/src/: lib.rs
wallet-example/: Cargo.toml  request.json
wallet-example/src/: lib.rs  wallet.rs
wallet-keystore/: Cargo.toml
wallet-keystore/src/: lib.rs
wallet-macro/: Cargo.toml
wallet-macro/macros/: Cargo.toml
wallet-macro/src/: lib.rs
wallet-oss/: Cargo.toml
wallet-oss/src/: error.rs  lib.rs
wallet-transport/: Cargo.toml
wallet-transport-backend/: Cargo.toml
wallet-transport-backend/src/: api_request.rs  api_response.rs  consts.rs  http.rs  lib.rs  request.rs  response.rs
wallet-transport-backend/tests/: mod.rs
wallet-transport/src/: lib.rs  main.rs  request_builder.rs
wallet-tree/: Cargo.toml
wallet-tree/src/: api.rs  error.rs  lib.rs  migration.rs  service.rs
wallet-types/: Cargo.toml
wallet-types/src/: constant.rs  error.rs  lib.rs
wallet-utils/: Cargo.toml  warn.txt
wallet-utils/src/: address.rs  conversion.rs  file_func.rs  hex_func.rs  lib.rs  parse_func.rs  serde_func.rs  snowflake.rs  system_info.rs  time.rs  unit.rs
(+645 files in other folders)
