[workspace]
members = [
    "wallet-api",
    "wallet-database",
    "wallet-transport-backend",
    # "wallet-error",
    "wallet-macro",
    "wallet-oss",
]

resolver = "2"
[patch.crates-io.libc]
git = "https://github.com/rust-lang/libc.git"
rev = "dad00cb00e92baa7e28a542eb94bc2a78762f583"


[workspace.dependencies]
wallet-api = { version = "0.1.0", default-features = false, path = "wallet-api", features = [
    "test_net",
] }
wallet-oss = { version = "0.1.0", default-features = false, path = "wallet-oss" }
wallet-database = { version = "0.1.0", default-features = false, path = "wallet-database" }
wallet-transport-backend = { version = "0.1.0", default-features = false, path = "wallet-transport-backend" }
wallet-macro = { version = "0.1.0", default-features = false, path = "wallet-macro" }

wallet-keystore = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-chain-interact = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-chain-instance = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-transport = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-utils = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-types = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-tree = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }
wallet-core = { default-features = false, git = "https://github.com/77-wallet/77_wallet_core.git", rev = "7c9945bc26736d8839d0f3b11ca188bb4ae049c0" }

# wallet-keystore = { default-features = false, path = "../77_wallet_core/wallet-keystore" }
# wallet-chain-interact = { default-features = false, path = "../77_wallet_core/wallet-chain-interact" }
# wallet-chain-instance = { default-features = false, path = "../77_wallet_core/wallet-chain-instance" }
# wallet-transport = { default-features = false, path = "../77_wallet_core/wallet-transport" }
# wallet-utils = { default-features = false, path = "../77_wallet_core/wallet-utils" }
# wallet-types = { default-features = false, path = "../77_wallet_core/wallet-types" }
# wallet-tree = { default-features = false, path = "../77_wallet_core/wallet-tree" }
# wallet-core = { default-features = false, path = "../77_wallet_core/wallet-core" }


# wallet-example = { version = "0.1.0", default-features = false, path = "wallet-example" }
# wallet-error = { version = "0.1.0", default-features = false, path = "wallet-error" }


# http
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
] }
http = "1.1.0"

# time
chrono = { version = "0.4", features = ["serde"] }

#url
urlencoding = "2.1.3"

# ping
# surge-ping = "0.8.1"

# oss
url = { version = "^2" }

# mqtt
rumqttc = { version = "0.24.0", features = ["websocket", "url"] }

# log
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-error = "0.2.0"

# 
ctr = "0.9.2"
aes = "0.8"
ecb = "0.1.2"
block-modes = "0.8"
block-padding = "0.2"
digest = "0.10.0"
hex = "0.4"
hmac = "0.12.0"
pbkdf2 = { version = "0.11", default-features = false }
scrypt = { version = "0.10.0", default-features = false }
sha1 = "0.10.6"
sha2 = "0.10.1"
sha3 = "0.10.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.22.1"
cbc = "0.1"

md5 = "0.7.0"

percent-encoding = "2.3.1"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_repr = "0.1"
bincode = "1.3.3"

# error
thiserror = "1"
anyhow = "1"

rust_decimal = { version = "1.35.0", features = ["maths"] }
rand = "0.8.5"

# sqlx
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }


# async
futures-util = "0.3"
async-trait = "0.1.80"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

coins-bip39 = "0.8.7"
coins-bip32 = "0.8.7"


# # chain
# solana-sdk = "2"
bitcoin = { version = "0.32.2", features = [
    "rand-std",
    "serde",
], default-features = false } # "0.32.2"
alloy = { git = "https://github.com/alloy-rs/alloy", default-features = false, features = [
    # "consensus",
    "sol-types",
    # "providers",
    # "contract",
    "rpc-types",
    # "serde",
    # "provider-http",
    # "provider-ws",
    # "rpc-client",
    # "rpc-types-eth",
    # "node-bindings",
    "network",
    "signers",
    "signer-keystore",
    # "signer-mnemonic",
], rev = "ea5eb7d504a1f4eb6c9937af7913577f78fee121" }
bech32 = "0.11.0"

once_cell = { version = "1", default-features = false }

cfg-if = "1.0.0"

# map
dashmap = "6.1.0"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.protobuf]
git = "https://github.com/stepancheg/rust-protobuf/"
rev = "34680a41039a9e108d927b6d8d6647277589c912"

[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.test]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
