[package]
name = "wallet-chain-instance"
version = "0.1.0"
edition = "2021"

[dependencies]
# error
thiserror.workspace = true
# wallet-error = { workspace = true }
wallet-core = { workspace = true }
wallet-utils = { workspace = true }
wallet-types = { workspace = true }
alloy = { workspace = true }


anychain-bitcoin = "0.1.6"
anychain-core = "0.1.6"
anychain-tron = "0.2.3"

libsecp256k1 = { version = "0.7.1" }
solana-sdk = { workspace = true }
bitcoin = { workspace = true }
hex.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
secp256k1 = { version = "0.29" }
ripemd160 = "0.9"
sha3.workspace = true
bs58 = "0.4"
base32 = "0.5.0"
bech32 = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

ed25519-dalek = "2.1.1"


coins-bip32 = { workspace = true }
coins-bip39 = { workspace = true }

hdpath = "0.6.3"
