[package]
name = "wallet-chain-interact"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
bincode = "1.3.3"

# member
# wallet-database = { workspace = true }
wallet-utils = { workspace = true }
wallet-transport = { workspace = true }

# workspace
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
wallet-types = { workspace = true }

solana-sdk = { workspace = true }
mpl-token-metadata = "4.1.2"
alloy = { workspace = true }
bitcoin = { workspace = true }
base64.workspace = true
sha2 = { workspace = true }
sha3 = { workspace = true }

anychain-tron = "0.2.3"
anychain-core = "0.1.6"

# 链
protobuf = { version = "3.3.0" }
spl-associated-token-account = "4"
spl-token-2022 = "4"
solana-program = "^2"
# squads-multisig = "2.0.1"
borsh = "1.5.1"
[dev-dependencies]
libsecp256k1 = "0.6"
coins-bip39 = "0.8.7"
coins-bip32 = { workspace = true }
