[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-types = { workspace = true }
solana-sdk = { workspace = true }
# error
thiserror.workspace = true

# serde
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

coins-bip32 = { workspace = true }
coins-bip39 = { workspace = true }

rand = { workspace = true }
