[package]
name = "wallet-example"
version = "0.1.0"
edition = "2024"

[dependencies]
wallet-api = { workspace = true }
wallet-ffi = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }

tracing.workspace = true
tracing-subscriber.workspace = true

tempfile = "3.10.1"

# serde
serde.workspace = true
serde_json.workspace = true