[package]
name = "wallet-oss"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug-print"]
debug-print = []

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }

urlencoding = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
hmac = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true }
