[package]
name = "wallet-transport-backend"
version = "0.1.0"
edition = "2021"

[features]
# default = ["test"]
# default = ["dev"]
default = ["prod"]
test = []
dev = []
prod = []

[dependencies]
wallet-utils = { workspace = true }
# wallet-error = { workspace = true }
wallet-transport = { workspace = true }
wallet-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

rust_decimal = { workspace = true }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# error
thiserror.workspace = true

# http
reqwest.workspace = true
http.workspace = true
# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

urlencoding = { workspace = true }
cfg-if = { workspace = true }
