[package]
name = "wallet-transport-backend"
version = "0.1.0"
edition = "2024"

[features]
# default = ["test"]
default = ["dev"]
# default = ["prod"]
test = []
dev = []
prod = []
accept_invalid_certs = ["wallet-transport/accept_invalid_certs"]

[dependencies]
wallet-utils = { workspace = true }
wallet-transport = { workspace = true }
wallet-types = { workspace = true }
wallet-ecdh = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }

rust_decimal = { workspace = true }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# error
thiserror.workspace = true

# http
reqwest.workspace = true
http.workspace = true
# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

urlencoding = { workspace = true }
cfg-if = { workspace = true }
