[package]
name = "wallet-transport"
version = "0.1.0"
edition = "2021"

[features]
debug-print = []

[dependencies]
wallet-utils = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true }
# aliyun-oss-rust-sdk = { workspace = true }

rumqttc = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

jsonwebtoken = "9.3.0"

url = { workspace = true }
hmac = { version = "^0.12" }
base64 = { version = "^0.22" }
chrono = { version = "^0.4" }
# sha1 = {version = "^0.10"}
# serde-xml-rs = "0.6.0"
urlencoding = "2.1.3"
sha1 = "0.10.6"


# [replace]
# reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
[dev-dependencies]
dotenv = "0.15.0"
