[package]
name = "wallet-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
wallet-utils = { workspace = true }
wallet-types = { workspace = true }
anyhow = { workspace = true }

# error
thiserror.workspace = true

# log
tracing.workspace = true
tracing-subscriber.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true
