[package]
name = "wallet-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
wallet-utils = { workspace = true }
wallet-types = { workspace = true }
wallet-keystore = { workspace = true }
wallet-chain-instance = { workspace = true }
wallet-core = { workspace = true }

# error
thiserror.workspace = true

# log
tracing.workspace = true
tracing-subscriber.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

# time
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }

coins-bip32 = { workspace = true }
