[package]
name = "wallet-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }


# system_info
sysinfo = "0.32"

# serde
serde.workspace = true
serde_json.workspace = true

# error
thiserror.workspace = true
anyhow = { workspace = true }

# sha2 
sha2.workspace = true
# hex
hex.workspace = true
md5.workspace = true

hmac = { workspace = true }
pbkdf2 = { version = "0.12", default-features = false }

bs58 = "0.4"
percent-encoding = { workspace = true }

alloy.workspace = true
solana-sdk = { workspace = true }
bech32 = { workspace = true }
libsecp256k1 = "0.6"

base64 = { workspace = true }
aes.workspace = true
ecb.workspace = true
cbc = { workspace = true }


rust_decimal = { workspace = true }

http = { workspace = true }
bincode = { workspace = true }
reqwest.workspace = true

bitcoin.workspace = true

once_cell = { workspace = true }
